# MAS

./: .gitignore  CMakeLists.txt  README.md  mas.files
mas/: agent.hpp  environment.hpp  field.hpp  mas.hpp
src/: agent.cpp  environment.cpp  mas.cpp
